uncomment cache action so we can troubleshoot it now

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,17 +21,17 @@ jobs:
         with:
           node-version: "20"
 
-      #   - name: Persist npm cache
-      #     uses: actions/cache@v4
-      #     with:
-      #       path: ~/.npm
-      #       key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+      - name: Persist npm cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
 
-      #   - name: Persist Eleventy .cache
-      #     uses: actions/cache@v4
-      #     with:
-      #       path: ./.cache
-      #       key: ${{ runner.os }}-eleventy-fetch-cache
+      - name: Persist Eleventy .cache
+        uses: actions/cache@v4
+        with:
+          path: ./.cache
+          key: ${{ runner.os }}-eleventy-fetch-cache
 
       - run: npm install
       - run: npm run build
